--- a/Views/UserRole/Create.cshtml
+++ b/Views/UserRole/Create.cshtml
@@ -2,26 +2,29 @@
 
 <h4>Assign User Role</h4>
 <hr />
+<div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Email" class="control-label"></label>
                 @Html.DropDownList("Email",
                          new SelectList(ViewBag.UserSelectList, "Value", "Text",
                          ViewBag.SelectedUser),
-                         "Select User", new { @id = "userDD", @class = "form-control" })
+                         "Select User", new { @id = "email", @class = "form-control" })
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Role" class="control-label"></label>
-                @Html.DropDownList("Role",
+                <label asp-for="RoleName" class="control-label"></label>
+                @Html.DropDownList("RoleName",
                          new SelectList(ViewBag.RoleSelectList, "Value", "Text"),
-                         "Select Role", new { @id = "roleDD", @class = "form-control" })
-                <span asp-validation-for="Role" class="text-danger"></span>
-            </div>
+                         "Select Role", new { @id = "roleName", @class = "form-control" })
+                <span asp-validation-for="RoleName" class="text-danger"></span>
+            </div><br />
             <div class="form-group">
+                <input type="hidden" asp-for-"Email" value="Email" />
+                <input type="hidden" asp-for-"RoleName" value="RoleName" />
                 <button id="assignUserRole" type="submit"
                         class="w-100 btn btn-sm btn-primary">
                     Assign
