--- a/Views/Role/Delete.cshtml
+++ b/Views/Role/Delete.cshtml
@@ -11,13 +11,15 @@
 <div>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.RoleName)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.RoleName)
         </dd>
     </dl>
+
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
     <form asp-action="Delete" method="post">
         @Html.HiddenFor(model => model.RoleName)
