--- a/Views/UserRole/Detail.cshtml
+++ b/Views/UserRole/Detail.cshtml
@@ -5,7 +5,7 @@
     string message = ViewBag.Message;
 }
 
-<h3>User: @ViewBag.UserName</h3>
+<h3>User: @ViewBag.FullName</h3>
 
 @if (message.Length > 0)
 {
