--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -10,8 +10,7 @@ html {
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
   box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
-}
-
+}tex
 html {
   position: relative;
   min-height: 100%;
